--- a/styles.css
+++ b/styles.css
@@ -4,21 +4,22 @@ body {
 }
 
 .cell {
-  width: 30px;
-  height: 30px;
+  width: auto;
+  height: auto;
   background-color: palegoldenrod;
 }
 
-/*#container > div:hover {
-  width: 30px;
-  height: 30px;
-  background-color: pink;
-}*/
-
-#container {
-  height: 480px;
-  width: 480px;
+#container.grid-container {
+  height: 840px;
+  width: 840px;
   display: grid;
   grid-template-columns: repeat(16, 1fr);
   grid-template-rows: repeat(16, 1fr);
+}
+
+.flex {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
